--- a/gitlab/docker-compose.yml
+++ b/gitlab/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.6'
 services:
   gitlab:
-    image: gitlab/gitlab-ee:17.10.3-ee.0
+    image: gitlab/gitlab-ee:latest
     container_name: gitlab
     restart: always
     hostname: 'gitlab.ddragos.com'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://gitlab.ddragos.com'
+        external_url 'http://gitlab.ddragos.com'
     ports:
-      - '80:80'
-      - '443:443'
-      - '22:22'
+      - '8080:80'
+      - '8443:443'
+      - '8022:22'
     volumes:
       - '$GITLAB_HOME/config:/etc/gitlab'
       - '$GITLAB_HOME/logs:/var/log/gitlab'
