--- a/gitlab/docker-compose.yml
+++ b/gitlab/docker-compose.yml
@@ -7,12 +7,11 @@ services:
     hostname: 'gitlab.ddragos.com'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://gitlab.ddragos.com:8080'
-        gitlab_rails['gitlab_shell_ssh_port'] = 8022
+        external_url 'http://gitlab.ddragos.com'
     ports:
-      - '8080:8080'
-      - '8443:443'
-      - '8022:22'
+      - '80:80'
+      - '443:443'
+      - '22:22'
     volumes:
       - '$GITLAB_HOME/config:/etc/gitlab'
       - '$GITLAB_HOME/logs:/var/log/gitlab'
