Add extra hosts

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -13,6 +13,8 @@ RUN addgroup ${SSH_USER} wheel
 RUN curl -L --output /usr/local/bin/gitlab-runner "https://s3.dualstack.us-east-1.amazonaws.com/gitlab-runner-downloads/latest/binaries/gitlab-runner-linux-amd64"
 RUN chmod +x /usr/local/bin/gitlab-runner
 
+RUN echo "192.168.0.238 gitlab.ddragos.com" >> /etc/hosts
+
 EXPOSE 22
 
 CMD ["/usr/sbin/sshd", "-D"]
